dev: added role

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
-<app-body></app-body>
-<app-footer></app-footer>
+<app-header role="banner"></app-header>
+<app-body role="main"></app-body>
+<app-footer role="contentinfo"></app-footer>
