dev: dark and white theme

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/normalize.css/normalize.css";
+
+@import "./theme.scss";
+
+body {
+  font-family: sans-serif;
+  color: $fg-color;
+  background-color: $bg-color;
+}
