dev: added accessibility

--- a/front/src/app/layout/header/header.component.html
+++ b/front/src/app/layout/header/header.component.html
@@ -16,4 +16,6 @@
   </svg>
   <span>Gestion Stock</span>
 </a>
-<button (click)="themeService.toggleTheme()">Toggle Theme</button>
+<div class="utility" role="toolbar">
+  <button (click)="themeService.toggleTheme()">Toggle Theme</button>
+</div>
