--- a/front/src/app/layout/header/header.component.scss
+++ b/front/src/app/layout/header/header.component.scss
@@ -6,6 +6,7 @@
   height: 3em;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 0.5em;
   a {
     text-decoration: inherit;
