--- a/front/src/app/layout/footer/footer.component.scss
+++ b/front/src/app/layout/footer/footer.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $primary-bg-color;
+  background-color: $alternate-bg-color;
   color: $primary-fg-color;
   a {
     color: inherit;
