dev: added link

--- a/front/src/app/layout/header/header.component.html
+++ b/front/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<a href="#">
+<a routerLink="/">
   <svg viewBox="0 0 768 768" alt="Gestion Stock logo">
     <path d="M579.008 260.496l-45.008-162.992-262.992 74 41.984 162.992z" />
     <path
