--- a/front/src/app/layout/header/header.component.html
+++ b/front/src/app/layout/header/header.component.html
@@ -17,5 +17,7 @@
   <span>Gestion Stock</span>
 </a>
 <div class="utility" role="toolbar">
-  <button (click)="themeService.toggleTheme()">Toggle Theme</button>
+  <button class="primary" (click)="themeService.toggleTheme()">
+    Toggle Theme
+  </button>
 </div>
