--- a/front/src/app/routes/home/home.component.html
+++ b/front/src/app/routes/home/home.component.html
@@ -1,6 +1,4 @@
 <main>
   <h1>Gérer votre stock efficacement.</h1>
-  <button>Voir le stock</button>
-  <button disabled>Voir le stock</button>
-  <button class="primary">Voir le stock</button>
+  <button class="primary" routerLink="/stock">Voir le stock</button>
 </main>
