dev: added table

--- a/front/src/app/layout/header/header.component.scss
+++ b/front/src/app/layout/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "src/theme.scss";
+@import "src/variables.scss";
 
 :host {
   background-color: $primary-bg-color;
@@ -25,5 +25,9 @@
     span {
       font-size: 1.4em;
     }
+  }
+
+  button {
+    font-size: 0.7em;
   }
 }
