--- a/front/src/app/routes/stock/stock.component.html
+++ b/front/src/app/routes/stock/stock.component.html
@@ -1,1 +1,34 @@
-<p>stock works!</p>
+<main>
+  <h1>Liste des articles</h1>
+  <nav>
+    <button>Raffraichir</button>
+    <button>Ajouter</button>
+    <button>Supprimer</button>
+    <button>Editer</button>
+  </nav>
+
+  <table>
+    <tbody>
+      <tr>
+        <td class="name">Tournevis</td>
+        <td class="price">1.40 €</td>
+        <td class="qty">340 en stock</td>
+      </tr>
+      <tr>
+        <td class="name">Tournevis</td>
+        <td class="price">1.40 €</td>
+        <td class="qty">340 en stock</td>
+      </tr>
+      <tr>
+        <td class="name">Tournevis</td>
+        <td class="price">1.40 €</td>
+        <td class="qty">340 en stock</td>
+      </tr>
+      <tr>
+        <td class="name">Tournevis</td>
+        <td class="price">1.40 €</td>
+        <td class="qty">340 en stock</td>
+      </tr>
+    </tbody>
+  </table>
+</main>
