--- a/front/src/app/layout/header/header.component.scss
+++ b/front/src/app/layout/header/header.component.scss
@@ -18,9 +18,8 @@
     &:hover {
       text-decoration: underline;
     }
-    svg {
-      height: 2.5em;
-      fill: $primary-fg-color;
+    span.icon-logo {
+      font-size: 2.3em;
     }
     span {
       font-size: 1.4em;
