css: border-radius

--- a/front/src/app/routes/stock/stock.component.scss
+++ b/front/src/app/routes/stock/stock.component.scss
@@ -12,6 +12,7 @@ table tbody {
   tr {
     cursor: pointer;
     border: 0.1em solid #bbb;
+    border-radius: 0.3em;
     display: flex;
     flex-flow: column;
 
