--- a/front/src/theme.scss
+++ b/front/src/theme.scss
@@ -1,4 +1,9 @@
 :root {
+  // shape
+  --border-radius: 0.3em;
+  --padding: 0.5em 1em;
+  --border: 0.1em solid;
+
   // by default theme is light.
   --bg-color: white;
   --fg-color: black;
