--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -25,8 +25,8 @@ main {
 }
 
 button {
-  border-radius: 0.3em;
-  padding: 0.5em 1em;
+  border-radius: var(--border-radius);
+  padding: var(--padding);
   border: 0.1em solid $btn-bg-color;
   background-color: $btn-bg-color;
   color: $btn-disabled-fg-color;
