--- a/front/src/app/routes/stock/stock.component.scss
+++ b/front/src/app/routes/stock/stock.component.scss
@@ -19,6 +19,16 @@ table tbody {
 
     &:hover {
       background-color: var(--btn-hover-bg-color);
+      td.action {
+        display: block;
+        position: absolute;
+        top: -0.7em;
+        right: -1em;
+        button {
+          font-size: 0.5em;
+          border-color: black;
+        }
+      }
     }
 
     &.selected {
@@ -32,6 +42,10 @@ table tbody {
         display: flex;
         justify-content: space-between;
         font-weight: bold;
+      }
+
+      &.action {
+        display: none;
       }
     }
   }
