--- a/front/src/app/routes/legal/legal.component.html
+++ b/front/src/app/routes/legal/legal.component.html
@@ -1,1 +1,51 @@
-<p>legal works!</p>
+<main>
+  <h1>Mentions Légales</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eligendi
+    molestias corporis vel nobis dignissimos est quas nisi. Officia autem magnam
+    accusantium. Molestias aut iure omnis. Esse optio et placeat?
+  </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus culpa,
+    facere libero nihil est harum. Pariatur officia amet voluptatum quasi harum
+    voluptatibus deserunt natus perferendis temporibus iusto labore, ex debitis.
+  </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatum ex
+    aliquid consectetur delectus fugit rerum excepturi nostrum aperiam
+    temporibus ea perspiciatis debitis, placeat beatae obcaecati nobis labore
+    sapiente dicta?
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eligendi
+    molestias corporis vel nobis dignissimos est quas nisi. Officia autem magnam
+    accusantium. Molestias aut iure omnis. Esse optio et placeat?
+  </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus culpa,
+    facere libero nihil est harum. Pariatur officia amet voluptatum quasi harum
+    voluptatibus deserunt natus perferendis temporibus iusto labore, ex debitis.
+  </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatum ex
+    aliquid consectetur delectus fugit rerum excepturi nostrum aperiam
+    temporibus ea perspiciatis debitis, placeat beatae obcaecati nobis labore
+    sapiente dicta?
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eligendi
+    molestias corporis vel nobis dignissimos est quas nisi. Officia autem magnam
+    accusantium. Molestias aut iure omnis. Esse optio et placeat?
+  </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus culpa,
+    facere libero nihil est harum. Pariatur officia amet voluptatum quasi harum
+    voluptatibus deserunt natus perferendis temporibus iusto labore, ex debitis.
+  </p>
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero voluptatum ex
+    aliquid consectetur delectus fugit rerum excepturi nostrum aperiam
+    temporibus ea perspiciatis debitis, placeat beatae obcaecati nobis labore
+    sapiente dicta?
+  </p>
+</main>
