--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -22,6 +22,9 @@ main {
   align-items: center;
   gap: 0.5em;
   padding: 0.5em;
+  width: 100%;
+  max-width: 50em;
+  margin: 0 auto;
 }
 
 button {
