--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -8,6 +8,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  caret-color: var(--fg-color);
+  color: var(--fg-color);
 }
 
 body {
@@ -58,5 +60,32 @@ button {
         background-color: $btn-primary-active-bg-color;
       }
     }
+
+    &:focus {
+      outline: 0.05em solid var(--fg-color);
+    }
+  }
+}
+
+form {
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  max-width: 25em;
+  gap: 0.5em;
+
+  input {
+    width: 100%;
+    padding: var(--padding);
+    border: var(--border) #ccc;
+    border-radius: var(--border-radius);
+    background-color: var(--bg-color);
+    &:focus {
+      outline: 0.05em solid var(--fg-color);
+    }
+  }
+
+  button {
+    margin-top: 3em;
   }
 }
