--- a/front/src/app/routes/stock/stock.component.scss
+++ b/front/src/app/routes/stock/stock.component.scss
@@ -16,6 +16,7 @@ table tbody {
     display: flex;
     flex-flow: column;
     position: relative;
+    width: 19em;
 
     &:hover {
       background-color: var(--btn-hover-bg-color);
