--- a/front/src/app/routes/stock/add/add.component.html
+++ b/front/src/app/routes/stock/add/add.component.html
@@ -1,18 +1,18 @@
 <main>
   <h1>Ajout d'un article</h1>
-  <form>
+  <form [formGroup]="f" (ngSubmit)="submit()">
     <label>
       <div>Nom</div>
-      <input type="text" />
+      <input type="text" formControlName="name" />
     </label>
     <label>
       <div>Prix</div>
-      <input type="number" />
+      <input type="number" formControlName="price" />
     </label>
     <label>
       <div>Quantité</div>
-      <input type="number" />
+      <input type="number" formControlName="qty" />
     </label>
-    <button class="primary">Ajouter</button>
+    <button class="primary" [disabled]="f.invalid">Ajouter</button>
   </form>
 </main>
