dev: color for fa-icon

--- a/front/src/app/routes/stock/stock.component.scss
+++ b/front/src/app/routes/stock/stock.component.scss
@@ -8,6 +8,8 @@ table tbody {
   display: flex;
   gap: 1em;
   flex-wrap: wrap;
+  align-content: flex-start;
+  max-width: 40em;
 
   tr {
     cursor: pointer;
