--- a/front/src/app/routes/stock/add/add.component.html
+++ b/front/src/app/routes/stock/add/add.component.html
@@ -13,6 +13,10 @@
       <div>Quantité</div>
       <input type="number" formControlName="qty" />
     </label>
-    <button class="primary" [disabled]="f.invalid">Ajouter</button>
+    <button class="primary" [disabled]="f.invalid">
+      <fa-icon [icon]="faPlus" *ngIf="!isLoading"></fa-icon>
+      <fa-icon [icon]="faSpinner" [spin]="true" *ngIf="isLoading"></fa-icon>
+      Ajouter
+    </button>
   </form>
 </main>
