--- a/front/src/app/routes/stock/stock.component.html
+++ b/front/src/app/routes/stock/stock.component.html
@@ -1,6 +1,6 @@
 <main>
   <h1>Liste des articles</h1>
-  <div class="content">
+  <div class="list">
     <nav>
       <button arial-label="Raffraichir" (click)="refresh()">
         <fa-icon [icon]="faSync"></fa-icon>
