--- a/front/src/app/layout/footer/footer.component.scss
+++ b/front/src/app/layout/footer/footer.component.scss
@@ -5,8 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $alternate-bg-color;
-  color: $primary-fg-color;
+  background-color: var(--alternate-bg-color);
+  color: var(--primary-fg-color);
   a {
     color: inherit;
     text-decoration: none;
