--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,131 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/normalize.css/normalize.css";
-
 @import "./theme.scss";
-@import "./variables.scss";
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  caret-color: var(--fg-color);
-  color: var(--fg-color);
-}
-
-body {
-  font-family: sans-serif;
-  color: $fg-color;
-  background-color: $bg-color;
-}
-
-main {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  gap: 0.5em;
-  padding: 0.5em;
-  width: 100%;
-  max-width: 50em;
-  margin: 0 auto;
-}
-
-button {
-  border-radius: var(--border-radius);
-  padding: var(--padding);
-  border: 0.1em solid $btn-bg-color;
-  background-color: $btn-bg-color;
-  color: $btn-disabled-fg-color;
-  &:not(:disabled) {
-    cursor: pointer;
-    color: $btn-fg-color;
-    fa-icon * {
-      fill: $btn-fg-color;
-    }
-    &:hover {
-      border-color: $btn-hover-bg-color;
-      background-color: $btn-hover-bg-color;
-    }
-    &:active {
-      border-color: $btn-active-bg-color;
-      background-color: $btn-active-bg-color;
-    }
-
-    &.primary {
-      color: $btn-primary-fg-color;
-      border-color: $btn-primary-bg-color;
-      background-color: $btn-primary-bg-color;
-      fa-icon * {
-        fill: $btn-primary-fg-color;
-      }
-      &:hover {
-        border-color: $btn-primary-hover-bg-color;
-        background-color: $btn-primary-hover-bg-color;
-      }
-      &:active {
-        border-color: $btn-primary-active-bg-color;
-        background-color: $btn-primary-active-bg-color;
-      }
-    }
-
-    &:focus {
-      outline: 0.05em solid var(--fg-color);
-    }
-  }
-}
-
-form {
-  display: flex;
-  flex-flow: column;
-  width: 100%;
-  max-width: 25em;
-  gap: 0.5em;
-
-  input {
-    width: 100%;
-    padding: var(--padding);
-    border: var(--border) #ccc;
-    border-radius: var(--border-radius);
-    background-color: var(--bg-color);
-    &:focus {
-      outline: 0.05em solid var(--fg-color);
-    }
-  }
-
-  button {
-    margin-top: 3em;
-  }
-}
-
-.skeleton {
-  background-clip: content-box;
-  animation: loading 2s ease-in-out 0s infinite;
-}
-
-@keyframes loading {
-  from {
-    background-color: var(--skeleton-start-color);
-    color: var(--skeleton-start-color);
-  }
-
-  50% {
-    background-color: var(--skeleton-end-color);
-    color: var(--skeleton-end-color);
-  }
-
-  to {
-    background-color: var(--skeleton-start-color);
-    color: var(--skeleton-start-color);
-  }
-}
-
-.skeleton {
-  &.name {
-    width: 50%;
-  }
-  &.price {
-    width: 30%;
-  }
-  &.qty {
-    width: 70%;
-  }
-}
+@import "./scss/reset.scss";
+@import "./scss/button.scss";
+@import "./scss/layout.scss";
+@import "./scss/form.scss";
+@import "./scss/loading-skeleton.scss";
+@import "./scss/list.scss";
