dev: two ways binding

--- a/front/src/app/routes/stock/stock.component.html
+++ b/front/src/app/routes/stock/stock.component.html
@@ -59,7 +59,7 @@
   </div>
 </main>
 
-<app-sidebar [hidden]="showSidebar">
+<app-sidebar [(show)]="showSidebar">
   <h1>Coucou</h1>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
