--- a/front/src/app/widgets/sidebar/sidebar.component.html
+++ b/front/src/app/widgets/sidebar/sidebar.component.html
@@ -1,1 +1,5 @@
-<p>sidebar works!</p>
+<div class="overlay" [hidden]="!show" (click)="hide()">
+  <aside>
+    <ng-content></ng-content>
+  </aside>
+</div>
