--- a/front/src/theme.scss
+++ b/front/src/theme.scss
@@ -21,8 +21,8 @@
   --btn-primary-fg-color: white;
   --btn-disabled-fg-color: gray;
 
-  --skeleton-start-color: #ccc;
-  --skeleton-end-color: #ddd;
+  --skeleton-start-color: #ddd;
+  --skeleton-end-color: #eee;
 
   --sidebar-border-color: #888;
   --overlay-color: hsla(0, 0%, 50%, 0.7);
