dev: add filter content

--- a/front/src/app/routes/stock/stock.component.html
+++ b/front/src/app/routes/stock/stock.component.html
@@ -60,7 +60,20 @@
 </main>
 
 <app-sidebar [(show)]="showSidebar">
-  <h1>Coucou</h1>
+  <h1>Ordonner par</h1>
+  <button>
+    <fa-icon [icon]="faPlus"></fa-icon>
+  </button>
+  <select name="" id="">
+    <option value="x">x</option>
+    <option value="y">y</option>
+    <option value="z">z</option>
+  </select>
+  <select name="" id="">
+    <option value="ASC">ASC</option>
+    <option value="DESC">DESC</option>
+  </select>
+  <h1>Filtrer par</h1>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
     repellendus ut itaque? Asperiores nostrum commodi autem, quas atque saepe ea
